--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,7 +175,7 @@ dependencies {
     compile 'com.thefinestartist:finestwebview:1.2.7'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.koushikdutta.ion:ion:2.2.1'
-    implementation project(':geth')
+//    implementation project(':geth')
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.facebook.react:react-native:0.49.5'
