--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,7 +112,7 @@ def getProps(String propName) {
 repositories {
     jcenter()
     maven { url 'https://github.com/jitsi/jitsi-maven-repository/raw/master/releases' }
-    maven { url 'https://maven.fabric.io/public' }
+//    maven { url 'https://maven.fabric.io/public' }
     maven { url 'https://jitpack.io' }
 }
 
@@ -181,9 +181,9 @@ dependencies {
     compile 'com.facebook.react:react-native:0.49.5'
     compile 'com.google.android.gms:play-services-places:11.6.2'
     implementation project(':qrmodule')
-    compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
-        transitive = true;
-    }
+//    compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
+//        transitive = true;
+//    }
     compile 'com.github.yalantis:ucrop:2.2.1'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile 'com.github.GoodieBag:Pinview:v1.3'
