--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -370,9 +370,9 @@
             android:theme="@style/AppThemeNoAction" />
         <activity android:name=".ui.GroupDisplayActivity" />
 
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="9ebe0e16d1080723d689921d921604890f1a06c2" />
+        <!--<meta-data-->
+            <!--android:name="io.fabric.ApiKey"-->
+            <!--android:value="9ebe0e16d1080723d689921d921604890f1a06c2" />-->
 
         <meta-data
             android:name="net.wrappy.im.tasks.GlideVFSModule"
