--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -180,6 +180,7 @@
             android:name=".ui.ContactsPickerActivity"
             android:exported="false"
             android:label="@string/choose_friend"
+            android:theme="@style/AppThemeNoAction"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.PICK" />
