--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -479,8 +479,7 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.ReferralActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
