--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,10 @@ android {
         ]
     }
     buildToolsVersion '26.0.2'
+
+    configurations {
+        all*.exclude group: 'xpp3', module: 'xpp3'
+    }
 }
 
 ext {
@@ -158,18 +162,18 @@ dependencies {
     compile 'com.github.QuadFlask:colorpicker:0.0.10'
     compile project(':patternLibrary')
 
-     compile "org.igniterealtime.smack:smack-android:$smackVersion"
-     compile "org.igniterealtime.smack:smack-android-extensions:$smackVersion"
+    compile "org.igniterealtime.smack:smack-android:$smackVersion"
+    compile "org.igniterealtime.smack:smack-android-extensions:$smackVersion"
 //     compile "org.igniterealtime.smack:smack-omemo-signal:$smackVersion"
-     compile "org.igniterealtime.smack:smack-resolver-minidns:$smackVersion"
-     compile "org.igniterealtime.smack:smack-tcp:$smackVersion"
-     compile "org.igniterealtime.smack:smack-core:$smackVersion"
-     compile "org.igniterealtime.smack:smack-extensions:$smackVersion"
-     compile "org.igniterealtime.smack:smack-experimental:$smackVersion"
-     compile "org.igniterealtime.smack:smack-sasl-provided:$smackVersion"
+    compile "org.igniterealtime.smack:smack-resolver-minidns:$smackVersion"
+    compile "org.igniterealtime.smack:smack-tcp:$smackVersion"
+    compile "org.igniterealtime.smack:smack-core:$smackVersion"
+    compile "org.igniterealtime.smack:smack-extensions:$smackVersion"
+    compile "org.igniterealtime.smack:smack-experimental:$smackVersion"
+    compile "org.igniterealtime.smack:smack-im:$smackVersion"
+    compile "org.igniterealtime.smack:smack-sasl-provided:$smackVersion"
 
-
-//    compile "org.igniterealtime.smack:smack-extensions:$smackVersion"
+    compile "org.igniterealtime.smack:smack-extensions:$smackVersion"
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.jakewharton:butterknife:8.8.1'
