--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         //applicationId 'net.wrappy.im'
         applicationId 'net.wrappy.im'
         versionCode 19
-        versionName "1.0.1"
-        archivesBaseName = "Wrappy-1.0.0"
+        versionName "1.0.2"
+        archivesBaseName = "Wrappy-" + versionName
         minSdkVersion project.ext.minSdkVersion
         targetSdkVersion project.ext.targetSdkVersion
         testApplicationId 'net.wrappy.im.test'
