fix UI bugs merge string from dev branch

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         //applicationId 'net.wrappy.im'
         applicationId 'net.wrappy.im'
         versionCode 22
-        versionName "1.0.3"
+        versionName "1.0.2"
         archivesBaseName = "Wrappy-" + versionName
         minSdkVersion project.ext.minSdkVersion
         targetSdkVersion project.ext.targetSdkVersion
@@ -56,10 +56,10 @@ android {
     productFlavors {
         dev {
             dimension "free"
-            applicationId = "net.wrappy.im"
-            applicationId 'net.wrappy.im'
+            applicationId = "net.wrappy.im2"
+            applicationId 'net.wrappy.im2'
             buildConfigField 'String', 'ROOT_URL', '"http://192.168.100.187:8080/8EF640C4836D96CE990B71F60E0EA1DB/"'
-            buildConfigField 'String', 'DOMAIN', '"im2.wrappy.network"'
+            buildConfigField 'String', 'DOMAIN', '"imdev.wrappy.network"'
             buildConfigField 'Boolean', 'IS_DEV', 'true'
         }
         free {
