--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ForgetPasswordActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.SecurityQuestionActivity"
             android:screenOrientation="portrait" />
@@ -483,7 +484,7 @@
         <activity
             android:name=".ui.InputPasswordRegisterActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing" />
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.InputPasswordLoginActivity"
             android:screenOrientation="portrait"
