--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,8 @@ android {
     productFlavors {
         dev {
             dimension "free"
-            applicationId = "net.wrappy.im2"
-            applicationId 'net.wrappy.im2'
+            applicationId = "net.wrappy.im"
+            applicationId 'net.wrappy.im'
             buildConfigField 'String', 'ROOT_URL', '"http://192.168.100.187:8080/8EF640C4836D96CE990B71F60E0EA1DB/"'
             buildConfigField 'String', 'DOMAIN', '"imdev.wrappy.network"'
             buildConfigField 'Boolean', 'IS_DEV', 'true'
